--- a/_posts/2015-06-21-economic.html
+++ b/_posts/2015-06-21-economic.html
@@ -52,6 +52,8 @@
 		</tr>
 	</table>
 	
+
+	
 	
 	
 	<h3> Задание 2 </h3>
@@ -90,6 +92,306 @@
 			<td> 7 </td>
 		</tr>
 	</table>
+	
+	<br>
+	<p> Решение </p>
+	<p> Первый этап решения транспортной задачи сводится к определению её типа, открытой она является или закрытой. Закрытой называют задачу у которой потребности и возможности равны между собой. </p>
+	<p> Сумма ai = 25 + 25 + 10 = 60 </p>
+	<p> Сумма bj = 16 + 20 + 12 + 12 = 60 </p>
+	<p> Так как ai = bj, то задача является закрытой. </p>
+	
+	<br>
+	<p> Второй этап - поиск опорного плана методом "наименьшей стоимости". Среди всех стоимостей наименьшей является - 3. Для этой величины ai = 25 (см. строку) и bj = 12 (см. столбец). min(25,12) = 12, вычтем эту величину из 25 и 12. Получим новую таблицу. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 16 </th>
+			<th> 20 </th>
+			<th> 12 </th>
+			<th> 0 </th>
+		</tr>
+		<tr>
+			<th width='40'> 13 </th>
+			<td width='40'> 16 </td>
+			<td width='40'> 7 </td>
+			<td width='40'> 5 </td>
+			<td width='40'> - </td>
+		</tr>
+		<tr>
+			<th> 25 </th>
+			<td> 5 </td>
+			<td> 6 </td>
+			<td> 4 </td>
+			<td> X </td>
+		</tr>
+		<tr>
+			<th> 10 </th>
+			<td> 9 </td>
+			<td> 10 </td>
+			<td> 6 </td>
+			<td> X </td>
+		</tr>
+	</table>
+	
+	<br>
+	<p> Повторим этап. Среди всех стоимостей наименьшей является - 4. Для этой величины ai = 25 (см. строку) и bj = 12 (см. столбец). min(25,12) = 12, вычтем эту величину из 25 и 12. Получим новую таблицу. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 16 </th>
+			<th> 20 </th>
+			<th> 0 </th>
+			<th> 0 </th>
+		</tr>
+		<tr>
+			<th width='40'> 13 </th>
+			<td width='40'> 16 </td>
+			<td width='40'> 7 </td>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+		</tr>
+		<tr>
+			<th> 13 </th>
+			<td> 5 </td>
+			<td> 6 </td>
+			<td> - </td>
+			<td> X </td>
+		</tr>
+		<tr>
+			<th> 10 </th>
+			<td> 9 </td>
+			<td> 10 </td>
+			<td> X </td>
+			<td> X </td>
+		</tr>
+	</table>
+	
+	<br>
+	<p> И снова повторим этап. Среди всех стоимостей наименьшей является - 5. Для этой величины ai = 13 (см. строку) и bj = 16 (см. столбец). min(13,16) = 13, вычтем эту величину из 13 и 16. Получим новую таблицу. В этом случае нулю равна величина ai, поэтому вычёркиваем строку. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 3 </th>
+			<th> 20 </th>
+			<th> 0 </th>
+			<th> 0 </th>
+		</tr>
+		<tr>
+			<th width='40'> 13 </th>
+			<td width='40'> 16 </td>
+			<td width='40'> 7 </td>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<td> - </td>
+			<td> X </td>
+			<td> - </td>
+			<td> X </td>
+		</tr>
+		<tr>
+			<th> 10 </th>
+			<td> 9 </td>
+			<td> 10 </td>
+			<td> X </td>
+			<td> X </td>
+		</tr>
+	</table>
+	
+	<br>
+	<p> Повторим этап. Среди всех стоимостей наименьшей является - 7. Для этой величины ai = 13 (см. строку) и bj = 20 (см. столбец). min(13,20) = 13, вычтем эту величину из 13 и 20. Получим новую таблицу. В этом случае нулю равна величина ai, поэтому вычёркиваем строку. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 3 </th>
+			<th> 7 </th>
+			<th> 0 </th>
+			<th> 0 </th>
+		</tr>
+		<tr>
+			<th width='40'> 0 </th>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<td> - </td>
+			<td> X </td>
+			<td> - </td>
+			<td> X </td>
+		</tr>
+		<tr>
+			<th> 10 </th>
+			<td> 9 </td>
+			<td> 10 </td>
+			<td> X </td>
+			<td> X </td>
+		</tr>
+	</table>
+	
+	<br>
+	<p> Этап 2 можно повторить ещё два раза, но смысла нет, так как осталась единственная строка и необходимо удовлетворить все оставшиеся потребности. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<th> 0 </th>
+			<th> 0 </th>
+			<th> 0 </th>
+		</tr>
+		<tr>
+			<th width='40'> 0 </th>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+			<td width='40'> X </td>
+			<td width='40'> - </td>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<td> - </td>
+			<td> X </td>
+			<td> - </td>
+			<td> X </td>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<td> - </td>
+			<td> - </td>
+			<td> X </td>
+			<td> X </td>
+		</tr>
+	</table>
+	
+	<br>
+	<p> Подсчитав количество прочерков в таблице и убедившись, что их количество равно m+n-1, где m - количество столбцов, n - количество строк, считаем, что найден опорный невырожденный план . </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> 16 </th>
+			<th> 20 </th>
+			<th> 12 </th>
+			<th> 12 </th>
+		</tr>
+		<tr>
+			<th width='50'> 25 </th>
+			<td width='50'> 16 </td>
+			<td width='50'> 7 [13] </td>
+			<td width='50'> 5 </td>
+			<td width='50'> 3 [12] </td>
+		</tr>
+		<tr>
+			<th> 25 </th>
+			<td> 5 [13] </td>
+			<td> 6 </td>
+			<td> 4 [12] </td>
+			<td> 20 </td>
+		</tr>
+		<tr>
+			<th> 10 </th>
+			<td> 9 [3] </td>
+			<td> 10 [7] </td>
+			<td> 6 </td>
+			<td> 7 </td>
+		</tr>
+	</table>
+	
+	<p> Сумма чисел находящихся в квадратных скобках по каждой строке и каждому столбцу равны соотвтетственно ai и bj. </p>
+	
+	<p> Подсчитаем, чему равна целевая функция. <br>
+	F = 7*13 + 3*12 + 5*13 + 4*12 + 9*3 + 10*7 = 91 + 36 + 65 + 48 + 27 + 70 = 337 </p>
+	
+	<p> Третий этап. Для проверки оптимальности плана необходимо найти предварительные потенциалы, используя клетки таблицы с прямоугольными скобками. <br> Положим u1 = 0. </p>
+	
+	<p> u1 + v2 = 7 <br>
+	0 + v2 = 7 <br>
+	v2 = 7 </p>
+	
+	<p> u1 + v4 = 3 <br>
+	0 + v4 = 3 <br>
+	v4 = 3 </p>
+	
+	<p> u3 + v2 = 10 <br>
+	u3 + 7 = 10 <br>
+	u3 = 3 </p>
+	
+	<p> u3 + v1 = 9 <br>
+	3 + v1 = 9 <br>
+	v1 = 6 </p>
+	
+	<p> u2 + v1 = 5 <br>
+	u2 + 6 = 5 <br>
+	u2 = -1 </p>
+	
+	<p> u2 + v3 = 4 <br>
+	-1 + v3 = 4 <br>
+	v3 = 5 </p>
+	
+	<p> Разместим данные в таблице. В круглые скобки поместим сумму ui и vj. </p>
+	
+	<table border='1' cols='4'>
+		<tr>
+			<th rowspan='2'> ai </th>
+			<th colspan='4'> bj </th>
+		</tr>
+		<tr>
+			<th> v1=6 </th>
+			<th> v2=7 </th>
+			<th> v3=5 </th>
+			<th> v4=3 </th>
+		</tr>
+		<tr>
+			<th width='70'> u1=0 </th>
+			<td width='70'> (6) 16 </td>
+			<td width='70'> (7) 7 [13] </td>
+			<td width='70'> (5) 5 </td>
+			<td width='70'> (3) 3 [12] </td>
+		</tr>
+		<tr>
+			<th> u2=-1 </th>
+			<td> (5) 5 [13] </td>
+			<td> (6) 6 </td>
+			<td> (4) 4 [12] </td>
+			<td> (2) 20 </td>
+		</tr>
+		<tr>
+			<th> u3=3 </th>
+			<td> (9) 9 [3] </td>
+			<td> (10) 10 [7] </td>
+			<td> (8) 6 </td>
+			<td> (6) 7 </td>
+		</tr>
+	</table>
+	
+	<p> Если хотя бы в одной клетке значение в скобках оказывается больше, чем значение цены, то план не является оптимальным, следует продолжить работу. </p>
+	
+	<p> План не явлется оптимальным (для v3 и u3 сумма равна 8, что больше 6). </p>
 	
 	
 	
