--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -5,15 +5,12 @@ author: Valentin Gubarev
 section: experimental
 ---
 
-<link rel="stylesheet" href="/css/styles_experimental.css">
-
 <script src="/js/random.js"></script>
 
 <p>Случайная последовательность символов</p>
-<input type='text' size='10' maxlength='10' id='text'></input>
-
-<input type='button' value = 'генерировать'
-	onClick='start_random()'></input>
+<input type='text' maxlength='10' id='text'></input>
+<br>
+<input type='button' value = 'генерировать' onClick='start_random()'></input>
 
 
 
