--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -30,7 +30,7 @@ section: experimental
 <p>Случайная последовательность символов</p>
 <input type='text' maxlength='20' id='text'></input>
 <br>
-<input type='button' value = 'генерировать' onClick='start_random()'></input>
+<input type='button' value = 'Генерировать' onClick='start_random()'></input>
 
 
 
