--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -5,15 +5,14 @@ author: Valentin Gubarev
 section: experimental
 ---
 
+<script src="/js/random.js"></script>
+
 <p>Случайная последовательность символов</p>
 <input type='text' maxlength='20' id='text'></input>
 <br>
-<br><input type='button' value = 'Генерировать' onClick='start_random()'></input>
+<br><input type='button' value = 'генерировать' onClick='start_random()'></input>
 <br>
 <br><input type='checkbox' id='arr0' checked>abcdefghijklmnopqrstuvwxyz
 <br><input type='checkbox' id='arr1' checked>ABCDEFGHIJKLMNOPQRSTUVWXYZ
 <br><input type='checkbox' id='arr2' checked>0123456789
 <br><input type='checkbox' id='arr3' checked>!@#$%^&*()_+*/\\|,.?{}[]:;'"<>
-
-<script src="/js/random.js"></script>
-
