Длина последовательности в Random

--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -10,8 +10,9 @@ section: experimental
 <p>Случайная последовательность символов</p>
 <input type='text' maxlength='20' id='text'></input>
 <br>
-<br><input type='button' value = 'генерировать' onClick='start_random()'></input>
+<br><input type='button' value = 'Генерировать' onClick='start_random()'></input>
 <br>
+<br>Длина последовательности<input type='text' maxlength='2' id='length'></input>
 <br><input type='checkbox' id='arr0' checked>abcdefghijklmnopqrstuvwxyz
 <br><input type='checkbox' id='arr1' checked>ABCDEFGHIJKLMNOPQRSTUVWXYZ
 <br><input type='checkbox' id='arr2' checked>0123456789
