--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -7,12 +7,16 @@ section: experimental
 
 <script src="/js/random.js"></script>
 
-<p>Случайная последовательность символов</p>
-<input type='text' maxlength='20' id='text'></input>
-<br>
-<br><input type='button' value = 'Генерировать' onClick='start_random()'></input>
-<br>
-<br>Длина последовательности<input type='text' maxlength='2' id='length'></input>
+<p style='text-align:center'>
+Случайная последовательность символов</p>
+<p style='text-align:center'>
+<input type='text' style='text-align:center' size='100' maxlength='20' id='text'></input></p>
+<p style='text-align:center'>
+<input type='button' value = 'Генерировать' onClick='start_random()'></input></p>
+<p style='text-align:center'>
+Длина последовательности 
+<input type='text' style='text-align:center' maxlength='2' id='length'></input><p>
+
 <br><input type='checkbox' id='arr0' checked>abcdefghijklmnopqrstuvwxyz
 <br><input type='checkbox' id='arr1' checked>ABCDEFGHIJKLMNOPQRSTUVWXYZ
 <br><input type='checkbox' id='arr2' checked>0123456789
