--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -7,6 +7,7 @@ section: experimental
 
 <script src="/js/random.js"></script>
 
+<tt>
 <p style='text-align:center'>
 Случайная последовательность символов</p>
 <p style='text-align:center'>
@@ -21,3 +22,6 @@ section: experimental
 <br><input type='checkbox' id='arr1' checked>ABCDEFGHIJKLMNOPQRSTUVWXYZ
 <br><input type='checkbox' id='arr2' checked>0123456789
 <br><input type='checkbox' id='arr3' checked>!@#$%^&*()_+*/\\|,.?{}[]:;'"<>
+<br><input type='checkbox' id='arr4' checked>
+<input type='text' placeholder='Укажите свой набор знаков' size='40' maxlength='40' id='user'></input>
+ </tt>
