--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -8,20 +8,21 @@ section: experimental
 <script src="/js/random.js"></script>
 
 <tt>
-<p style='text-align:center'>
-Случайная последовательность символов</p>
-<p style='text-align:center'>
-<input type='text' style='text-align:center' size='100' maxlength='20' id='text'></input></p>
-<p style='text-align:center'>
-<input type='button' value = 'Генерировать' onClick='start_random()'></input></p>
-<p style='text-align:center'>
-Длина последовательности 
-<input type='text' style='text-align:center' maxlength='2' id='length'></input><p>
-
-<br><input type='checkbox' id='arr0' checked>abcdefghijklmnopqrstuvwxyz
+<p>Символы, из которых следует генерировать случайную последовательность</p>
+<input type='checkbox' id='arr0' checked>abcdefghijklmnopqrstuvwxyz
 <br><input type='checkbox' id='arr1' checked>ABCDEFGHIJKLMNOPQRSTUVWXYZ
 <br><input type='checkbox' id='arr2' checked>0123456789
 <br><input type='checkbox' id='arr3' checked>!@#$%^&*()_+*/\\|,.?{}[]:;'"<>
 <br><input type='checkbox' id='arr4' checked>
-<input type='text' placeholder='Укажите свой набор знаков' size='40' maxlength='40' id='user'></input>
- </tt>
+<input type='text' style='font-family:monospace' placeholder='Укажите свой набор знаков' size='40em' maxlength='40' id='user'></input>
+<br><br>
+Длина последовательности 
+<input type='text' style='font-family:monospace' size='2em' value='8' maxlength='2' id='length'></input><p>
+<br>
+<input type='button' value='Генерировать' onClick='start_random()'></input>
+<br>
+<br>Список сгенерированных последовательностей
+<br>
+<table id='table' style='white-space:pre-wrap' border='1px'>
+</table>
+</tt>
