Добавление фоток в Псков Достижения

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -27,11 +27,15 @@ title: Достижения
         {file: "CertificateOfAchievement_2011_11_27.jpg", title: ""},
         {file: "CertificateOfAchievement_2012_12_02_1.jpg", title: ""},
         {file: "CertificateOfAchievement_2012_12_02_2.jpg", title: ""},
+		{file: "CertificateOfAchievement_2014_12_07.jpg", title: ""},
+		{file: "CertificateOfAchievement_2015_12_06.jpg", title: ""},
     ];
     var acmDiplom = [
         {file: "Diploma_2009_11_11.jpg", title: ""},
         {file: "Diploma_2011_11_27.jpg", title: ""},
         {file: "Diploma_2012_12_02.jpg", title: ""},
+		{file: "Diploma_2013_12_01_rus.jpg", title: ""},
+		{file: "Diploma_2013_12_01_eng.jpg", title: ""},
     ];
     var openOlymp = [
         {file: "CertificateInternetOlimpInfo_2013_04_13_1.jpg", title: ""},
@@ -41,6 +45,9 @@ title: Достижения
         {file: "CertificateInternetOlimpMath_2013_04_14_2.jpg", title: ""},
         {file: "CertificateInternetOlimpMath_2013_04_14_3.jpg", title: ""},
         {file: "MedalMath_2013.jpg", title: ""},
+		{file: "DiplomaInternetOlympInfo_2014_1.jpg", title: ""},
+		{file: "DiplomaInternetOlympInfo_2014_2.jpg", title: ""},
+		{file: "DiplomaInternetOlympInfo_2014_3.jpg", title: ""},
     ];
     var mathLogic = [
         {file: "DiplomaMathLog_2011_06_01_1.jpg", title: ""},
@@ -51,23 +58,61 @@ title: Достижения
         {file: "DiplomaMathLog_2012_06_01_3.jpg", title: ""},
         {file: "DiplomaMathLog_2012_06_01_4.jpg", title: ""},
         {file: "DiplomaMathLog_2012_06_01_5.jpg", title: ""},
+		{file: "DiplomaMathLog_2013_08_29.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_1.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_2.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_3.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_4.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_5.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_6.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_08_28_1.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_08_28_2.jpg", title: ""},
+		{file: "DiplomaMathLog_2015_06_09_1.jpg", title: ""},
+		{file: "DiplomaMathLog_2015_06_09_2.jpg", title: ""},
+		{file: "DiplomaMathLog_2016_06_03_1.jpg", title: ""},
+		{file: "DiplomaMathLog_2016_06_03_2.jpg", title: ""},
+		{file: "DiplomaMathLog_2016_06_03_3.jpg", title: ""},
     ];
     var volga = [
         {file: "DiplomaPovolgie_2013_04_07.jpg", title: ""},
         {file: "CertificatePovolgie_2013_04_07.jpg", title: ""},
     ];
     var itPlaneta = [
+	    {file: "it-planet_2011_1.jpg", title: ""},
+		{file: "it-planet_2011_2.jpg", title: ""},
+		{file: "it-planet_2011_3.jpg", title: ""},
+		{file: "it-planet_2011_4.jpg", title: ""},
+		{file: "it-planet_2012.jpg", title: ""},
         {file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2014_01_31.jpg", title: ""},
         {file: "it-planet-2014-1.jpg", title: ""},
         {file: "it-planet-2014-2.jpg", title: ""},
         {file: "it-planet-2014-3.jpg", title: ""},
+		{file: "it-planet_2014_4.jpg", title: ""},
+		{file: "it-planet_2014_5.jpg", title: ""},
+		{file: "it-planet_2014_6.jpg", title: ""},
+		{file: "it-planet_2014_7.jpg", title: ""},
+		{file: "it-planet_2014_8.jpg", title: ""},
+		{file: "it-planet_2015_1.jpg", title: ""},
+		{file: "it-planet_2015_2.jpg", title: ""},
+		{file: "it-planet_2015_3.jpg", title: ""},
+		{file: "it-planet_2015_4.jpg", title: ""},
+		{file: "it-planet_2015_5.jpg", title: ""},
+		{file: "it-planet_2016_1.jpg", title: ""},
+        {file: "it-planet_2016_2.jpg", title: ""},
+        {file: "it-planet_2016_3.jpg", title: ""},
+		{file: "it-planet_2016_4.jpg", title: ""},
+		{file: "it-planet_2016_5.jpg", title: ""},
+		{file: "it-planet_2016_6.jpg", title: ""},
+		{file: "it-planet_2016_7.jpg", title: ""},
+		{file: "it-planet_2016_8.jpg", title: ""},
     ];
 	var abbyy = [
 		{file: "DiplomaAbbyCup_2014.jpg", title: ""}
 	];
     var gratitude = [
+		{file: "Gratitude_2007_07_07.jpg", title: ""},
         {file: "Gratitude_2009_02_21.jpg", title: ""},
         {file: "Gratitude_2012_02_16_1.jpg", title: ""},
         {file: "Gratitude_2012_02_16_2.jpg", title: ""},
@@ -83,6 +128,8 @@ title: Достижения
         {file: "DiplomaWinner_2011_2.jpg", title: ""},
     ];
     var izhevsk = [
+		{file: "CertificatePerm_2007_07_07_1.jpg", title: ""},
+		{file: "CertificatePerm_2007_07_07_2.jpg", title: ""},
         {file: "CertificateIgevsk_2009_02_21.jpg", title: ""},
         {file: "CertificateIgevsk_2011_02_20.JPG", title: ""},
         {file: "CertificateIgevsk_2011_09_18.JPG", title: ""},
