Добавлено несколько фотографий в ПсковФото и небольшие доделки в ПсковДостижения

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -64,7 +64,6 @@ title: Достижения
 		{file: "DiplomaMathLog_2014_06_01_3.jpg", title: ""},
 		{file: "DiplomaMathLog_2014_06_01_4.jpg", title: ""},
 		{file: "DiplomaMathLog_2014_06_01_5.jpg", title: ""},
-		{file: "DiplomaMathLog_2014_06_01_6.jpg", title: ""},
 		{file: "DiplomaMathLog_2014_08_28_1.jpg", title: ""},
 		{file: "DiplomaMathLog_2014_08_28_2.jpg", title: ""},
 		{file: "DiplomaMathLog_2015_06_09_1.jpg", title: ""},
@@ -83,7 +82,6 @@ title: Достижения
 		{file: "it-planet_2011_3.jpg", title: ""},
 		{file: "it-planet_2011_4.jpg", title: ""},
 		{file: "it-planet_2012.jpg", title: ""},
-        {file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2014_01_31.jpg", title: ""},
         {file: "it-planet-2014-1.jpg", title: ""},
@@ -111,11 +109,16 @@ title: Достижения
 	var abbyy = [
 		{file: "DiplomaAbbyCup_2014.jpg", title: ""}
 	];
+	var school = [
+		{file: "DiplomaPTL_2016_11_07.jpg", title: ""}
+	];
     var gratitude = [
 		{file: "Gratitude_2007_07_07.jpg", title: ""},
         {file: "Gratitude_2009_02_21.jpg", title: ""},
         {file: "Gratitude_2012_02_16_1.jpg", title: ""},
         {file: "Gratitude_2012_02_16_2.jpg", title: ""},
+		{file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
+		{file: "DiplomaMathLog_2014_06_01_6.jpg", title: ""},
     ];
     var administration = [
         {file: "DiplomaWinner_2009_1.jpg", title: ""},
@@ -158,6 +161,7 @@ title: Достижения
         addImages('izhevsk', izhevsk);
         addImages('gratitude', gratitude);
 		addImages('abbyy', abbyy);
+		addImages('school', school);
     });
 </script>
 
@@ -184,7 +188,10 @@ title: Достижения
 <h3>ABBYY Cup</h3>
 <div id="abbyy"></div>
 
-<h3>Сборы в Ижевске и Евпатории</h3>
+<h3>Работа со школьниками</h3>
+<div id="school"></div>
+
+<h3>Сборы в Перми, Ижевске и Евпатории</h3>
 <div id="izhevsk"></div>
 
 <h3>Дипломы Администрации Псковской области</h3>
