--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -20,13 +20,20 @@ title: Фотографии
         {file: "Photo_2009_1.JPG", title: "2009 год. Слева направо: Двойнев Роман, Марченко Андрей, Шваркунов Александр, Губарев Валентин Юрьевич"},
         {file: "Photo_2009_2.JPG", title: "2009 год. Слева направо: Барсук Алексей Юрьевич, Губарев Валентин Юрьевич, Хростицкий Владимир Аркадьевич, Решетников Иван Александрович"},
         {file: "Photo_2009_3.JPG", title: "2009 год. Слева направо: Нургалиев Алексей, Егоров Максим"},
+		{file: "Photo_2010_Perm.JPG", title: "2010 год. Слева направо: Хростицкий Владимир, Решетников Иван, Барсук Алексей, Нургалиев Алексей"},
         {file: "Photo_2010.JPG", title: "2010 год. Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, Норина Юлия, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
-        {file: "Photo_2011.JPG", title: "2011 год. Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
+        {file: "Photo_2011_Igevsk.JPG", title: "2011 год, Ижевск. Слева направо: Решетников Иван, Нургалиев Алексей, Барсук Алексей"},
+		{file: "Photo_2011.JPG", title: "2011 год. Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
+		{file: "Photo_2012_Evpatoria_1.JPG", title: "2012 год, Евпатория. Слева направо: Коваленко Игорь, Барсук Алексей, Решетников Иван, Струнина Виктория Николаевна"},
+		{file: "Photo_2012_Evpatoria_2.JPG", title: "2012 год, Евпатория. Нургалиев Алексей"},
         {file: "Photo_2012.JPG", title: "2012 год. Слева направо, сидя: Хижняк Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
         {file: "Photo_2013_1.JPG", title: "2013 год. Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
         {file: "Photo_2013_2.JPG", title: "2013 год. Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шаоабод Максим, Дмитриев Артемий"},
         {file: "PhotoMath_2013_1.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
         {file: "PhotoMath_2013_2.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
+		{file: "Photo_2014_InternetOlymp.jpg", title: "2014 год. Слева направо: Шантарин Владимир, Шалабод Максим, Дмитриев Артемий"},
+		{file: "Photo_2015_IT-Planet.jpg", title: "2015 год. Слева направо: Лехин Сергей Никифорович, Мотина Надежда Владимировна, Затравкин Кирилл, Прокофьева Татьяна, Цуврила Константин"},
+		{file: "Photo_2016_IT-Planet.jpg", title: "2016 год. Слева направо: Затравкин Кирилл, Федоров Александр, Швецов Игорь, Иванова Анна, Клевцова Екатерина"},
     ];
     $(function(){
         addImages('gallery', gallery);
