--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -125,7 +125,7 @@ title: Достижения
         {file: "DiplomaWinner_2009_2.jpg", title: ""},
         {file: "DiplomaWinner_2009_3.jpg", title: ""},
         {file: "DiplomaWinner_2009_4.jpg", title: ""},
-        {file: "DiplomaWinner_2009_5.JPG", title: ""},
+        {file: "DiplomaWinner_2009_5.jpg", title: ""},
         {file: "DiplomaWinner_2009_6.jpg", title: ""},
         {file: "DiplomaWinner_2011_1.jpg", title: ""},
         {file: "DiplomaWinner_2011_2.jpg", title: ""},
@@ -134,9 +134,9 @@ title: Достижения
 		{file: "CertificatePerm_2007_07_07_1.jpg", title: ""},
 		{file: "CertificatePerm_2007_07_07_2.jpg", title: ""},
         {file: "CertificateIgevsk_2009_02_21.jpg", title: ""},
-        {file: "CertificateIgevsk_2011_02_20.JPG", title: ""},
-        {file: "CertificateIgevsk_2011_09_18.JPG", title: ""},
-        {file: "CertificateIgevsk_2012_02_16.JPG", title: ""},
+        {file: "CertificateIgevsk_2011_02_20.jpg", title: ""},
+        {file: "CertificateIgevsk_2011_09_18.jpg", title: ""},
+        {file: "CertificateIgevsk_2012_02_16.jpg", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_1.jpg", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_2.jpg", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_3.jpg", title: ""},
