Добавлены фото в Псков/Фото

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -22,6 +22,7 @@ title: Достижения
         {file: "CertificateOfAchievement_2007_10_28.jpg", title: ""},
         {file: "CertificateOfAchievement_2007_11_28.jpg", title: ""},
         {file: "CertificateOfAchievement_2008_11_26.jpg", title: ""},
+        {file: "CertificateOfAchievement_2009_10_17.jpg", title: ""},
         {file: "CertificateOfAchievement_2009_11_29.jpg", title: ""},
         {file: "CertificateOfAchievement_2010_11_24.jpg", title: ""},
         {file: "CertificateOfAchievement_2011_11_27.jpg", title: ""},
@@ -71,6 +72,7 @@ title: Достижения
 		{file: "DiplomaMathLog_2016_06_03_1.jpg", title: ""},
 		{file: "DiplomaMathLog_2016_06_03_2.jpg", title: ""},
 		{file: "DiplomaMathLog_2016_06_03_3.jpg", title: ""},
+		{file: "DiplomaMathLog_2016_06_03_4.jpg", title: ""},
     ];
     var volga = [
         {file: "DiplomaPovolgie_2013_04_07.jpg", title: ""},
@@ -119,6 +121,9 @@ title: Достижения
         {file: "Gratitude_2012_02_16_2.jpg", title: ""},
 		{file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
 		{file: "DiplomaMathLog_2014_06_01_6.jpg", title: ""},
+		{file: "Gratitude_2009_11_16.jpg", title: ""},
+		{file: "Gratitude_2009_12_01.jpg", title: ""},
+		{file: "Gratitude_2010.jpg", title: ""},
     ];
     var administration = [
         {file: "DiplomaWinner_2009_1.jpg", title: ""},
@@ -133,6 +138,7 @@ title: Достижения
     var izhevsk = [
 		{file: "CertificatePerm_2007_07_07_1.jpg", title: ""},
 		{file: "CertificatePerm_2007_07_07_2.jpg", title: ""},
+		{file: "CertificatePerm_2010.jpg", title: ""},
         {file: "CertificateIgevsk_2009_02_21.jpg", title: ""},
         {file: "CertificateIgevsk_2011_02_20.jpg", title: ""},
         {file: "CertificateIgevsk_2011_09_18.jpg", title: ""},
