--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -24,15 +24,25 @@ title: Фотографии
         {file: "Photo_2010.jpg", title: "2010 год. Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, Норина Юлия, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
         {file: "Photo_2011_Igevsk.jpg", title: "2011 год, Ижевск. Слева направо: Решетников Иван, Нургалиев Алексей, Барсук Алексей"},
 		{file: "Photo_2011.jpg", title: "2011 год. Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
+		{file: "Photo_2011_Paris.jpg", title: "2011 год, Париж. Второй слева Барсук Алексей"},
+		{file: "Photo_2012_MathLog.jpg", title: "2012 год. Участники Международного Чемпионата Математических и Логических Игр: Барсук Алексей, Нургалиев Алексей, Петрова Ирина, Губарев Валентин, Решетников Иван"},
 		{file: "Photo_2012_Evpatoria_1.jpg", title: "2012 год, Евпатория. Слева направо: Коваленко Игорь, Барсук Алексей, Решетников Иван, Струнина Виктория Николаевна"},
         {file: "Photo_2012.jpg", title: "2012 год. Слева направо, сидя: Хижняк Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
         {file: "Photo_2013_1.jpg", title: "2013 год. Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
-        {file: "Photo_2013_2.jpg", title: "2013 год. Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шаоабод Максим, Дмитриев Артемий"},
-        {file: "PhotoMath_2013_1.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
+        {file: "Photo_2013_2.jpg", title: "2013 год. Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шалабод Максим, Дмитриев Артемий"},
+		{file: "Photo_2013_Samara.jpg", title: "2013 год. Верхний ряд: Шантарин Владимир, Шалабод Максим, Коваленко Игорь, Барсук Алексей, Нургалиев Алексей, Решетников Иван. Нижний ряд: Андреев Дмитрий Анатольевич, Лехин Сергей Никифорович"},
+        {file: "Photo_2013_Tolyatti.jpg", title: "2013 год. Нургалиев Алексей, Шалашный Сергей Игоревич"},
+		{file: "PhotoMath_2013_1.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
         {file: "PhotoMath_2013_2.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
 		{file: "Photo_2014_InternetOlymp.jpg", title: "2014 год. Слева направо: Шантарин Владимир, Шалабод Максим, Дмитриев Артемий"},
+		{file: "Photo_2014_1.jpg", title: "2014 год. Слева направо: Шалабод Максим, Иванова Анна, Шантарин Владимир, Коваленко Игорь"},
+		{file: "Photo_2014_2.jpg", title: "2014 год. Слева направо: Федоров Александр, Степанов Дмитрий, Смирнов Павел, Дмитриев Артемий"},
+		{file: "Photo_2014_Paris_1.jpg", title: "2014 год. Барсук Алексей"},
+		{file: "Photo_2014_Paris_2.jpg", title: "2014 год. Шантарин Владимир"},
+		{file: "Photo_2015.jpg", title: "2015 год. Верхний ряд: Дмитриев Артемий, Шантарин Владимир, Шалабод Максим, Смирнов Павел, Федоров Александр. Нижний ряд: Коваленко Игорь Николаевич, Мотина Надежда Владимировна, Иванова Анна"},
 		{file: "Photo_2015_IT-Planet.jpg", title: "2015 год. Слева направо: Лехин Сергей Никифорович, Мотина Надежда Владимировна, Затравкин Кирилл, Прокофьева Татьяна, Цуврила Константин"},
 		{file: "Photo_2016_IT-Planet.jpg", title: "2016 год. Слева направо: Затравкин Кирилл, Федоров Александр, Швецов Игорь, Иванова Анна, Клевцова Екатерина"},
+		{file: "Photo_2017_Sochi.jpg", title: "2017 год. Лехин Сергей Никифорович, Шалашный Сергей Игоревич, Швецов Игорь, Иванова Анна, Федоров Александр"},
     ];
     $(function(){
         addImages('gallery', gallery);
