Изменила подписи к фото. Сделала МатЛог/Фото

--- a/mathematiques/photo/index.html
+++ b/mathematiques/photo/index.html
@@ -13,26 +13,10 @@ title: Фотографии
 
 <script>
     var gallery = [
-        {file: "Photo_2005.jpg", title: "2005 год. Слева направо: Николаев Виктор Васильевич, Барсуков Михаил, Тимофеев Андрей, Лункин Олег, Гарин Максим, Хагги Петр Анзельмович"},
-        {file: "Photo_2006.jpg", title: "2006 год. Слева направо: Барсуков Михаил, Тимофеев Андрей, Губарев Валентин Юрьевич, Хагги Петр Анзельмович, Мотина Надежда Владимировна, Лункин Олег, Васильев Леонид, Двойнев Роман, Николаев Юрий, Василенок Олег, Медончак Андрей"},
-        {file: "Photo_2007.jpg", title: "2007 год. Слева направо: Николаев Виктор Васильевич, Хростицкий Владимир, Николаев Юрий, Шваркунов Александр, Марченко Андрей, Степанов Андрей, Двойнев Роман, Недведский Павел, Медончак Андрей, Лехин Сергей Никифорович; сидя: Хагги Петр Анзельмович, Созинова Ирина, Губарев Валентин Юрьевич"},
-        {file: "Photo_2008.jpg", title: "2008 год. Слева направо: Егоров Максим, Антонов Александр, Ловыгин Антон, Двойнев Роман, Шваркунов Александр, Хагги Петр Анзельмович, Николаев Виктор Васильевич, Марченко Андрей, Недведский Павел, Иванов Евгений, Хростицкий Владимир, Березин Дмитрий"},
-        {file: "Photo_2009_1.jpg", title: "2009 год. Слева направо: Двойнев Роман, Марченко Андрей, Шваркунов Александр, Губарев Валентин Юрьевич"},
-        {file: "Photo_2009_2.jpg", title: "2009 год. Слева направо: Барсук Алексей Юрьевич, Губарев Валентин Юрьевич, Хростицкий Владимир Аркадьевич, Решетников Иван Александрович"},
-        {file: "Photo_2009_3.jpg", title: "2009 год. Слева направо: Нургалиев Алексей, Егоров Максим"},
-		{file: "Photo_2010_Perm.jpg", title: "2010 год. Слева направо: Хростицкий Владимир, Решетников Иван, Барсук Алексей, Нургалиев Алексей"},
-        {file: "Photo_2010.jpg", title: "2010 год. Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, Норина Юлия, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
-        {file: "Photo_2011_Igevsk.jpg", title: "2011 год, Ижевск. Слева направо: Решетников Иван, Нургалиев Алексей, Барсук Алексей"},
-		{file: "Photo_2011.jpg", title: "2011 год. Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
-		{file: "Photo_2012_Evpatoria_1.jpg", title: "2012 год, Евпатория. Слева направо: Коваленко Игорь, Барсук Алексей, Решетников Иван, Струнина Виктория Николаевна"},
-        {file: "Photo_2012.jpg", title: "2012 год. Слева направо, сидя: Хижняк Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
-        {file: "Photo_2013_1.jpg", title: "2013 год. Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
-        {file: "Photo_2013_2.jpg", title: "2013 год. Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шаоабод Максим, Дмитриев Артемий"},
-        {file: "PhotoMath_2013_1.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
-        {file: "PhotoMath_2013_2.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
-		{file: "Photo_2014_InternetOlymp.jpg", title: "2014 год. Слева направо: Шантарин Владимир, Шалабод Максим, Дмитриев Артемий"},
-		{file: "Photo_2015_IT-Planet.jpg", title: "2015 год. Слева направо: Лехин Сергей Никифорович, Мотина Надежда Владимировна, Затравкин Кирилл, Прокофьева Татьяна, Цуврила Константин"},
-		{file: "Photo_2016_IT-Planet.jpg", title: "2016 год. Слева направо: Затравкин Кирилл, Федоров Александр, Швецов Игорь, Иванова Анна, Клевцова Екатерина"},
+		{file: "Photo_2011_Paris.jpg", title: "2011 г., Финал Международного Чемпионата Математических и Логических Игр, Париж. Второй слева Барсук Алексей"},
+		{file: "Photo_2012_MathLog.jpg", title: "2012 г., Участники Международного Чемпионата Математических и Логических Игр: Барсук Алексей, Нургалиев Алексей, Петрова Ирина, Губарев Валентин, Решетников Иван"},
+		{file: "Photo_2014_Paris_1.jpg", title: "2014 г., Финал Международного Чемпионата Математических и Логических Игр, Париж: Барсук Алексей"},
+		{file: "Photo_2014_Paris_2.jpg", title: "2014 г., Финал Международного Чемпионата Математических и Логических Игр, Париж: Шантарин Владимир"},
     ];
     $(function(){
         addImages('gallery', gallery);
