Добавила фото в Псков/Достижения и Псков/Фото

--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -35,6 +35,7 @@ title: Фотографии
 		{file: "PhotoMath_2013_1.jpg", title: "2013 г., Международная Интернет-Олимпиада по Информатике: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
         {file: "PhotoMath_2013_2.jpg", title: "2013 г., Международная Интернет-Олимпиада по Информатике: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
 		{file: "Photo_2014_InternetOlymp.jpg", title: "2014 г., Международная Интернет-Олимпиада по Информатике: Шантарин Владимир, Шалабод Максим, Дмитриев Артемий"},
+		{file: "Photo_2017_It-Planet.jpg", title: "2014 г., Финал Олимпиады IT-Планета, Крым: Коваленко Игорь, Шантарин Владимир, Дмитриев Артемий, Шалашный Сергей Игоревич"},
 		{file: "Photo_2014_1.jpg", title: "2014 г., Чемпионат Мира по Программированию, Санкт-Петербург: Шалабод Максим, Иванова Анна, Шантарин Владимир, Коваленко Игорь"},
 		{file: "Photo_2014_2.jpg", title: "2014 г., Чемпионат Мира по Программированию, Санкт-Петербург: Федоров Александр, Степанов Дмитрий, Смирнов Павел, Дмитриев Артемий"},
 		{file: "Photo_2014_Paris_1.jpg", title: "2014 г., Финал Международного Чемпионата Математических и Логических Игр, Париж: Барсук Алексей"},
@@ -42,6 +43,7 @@ title: Фотографии
 		{file: "Photo_2015.jpg", title: "2015 г., Чемпионат Мира по Программированию. Верхний ряд: Дмитриев Артемий, Шантарин Владимир, Шалабод Максим, Смирнов Павел, Федоров Александр. Нижний ряд: Коваленко Игорь Николаевич, Мотина Надежда Владимировна, Иванова Анна"},
 		{file: "Photo_2015_IT-Planet.jpg", title: "2015 г., Финал Олимпиады IT-Планета (Санкт-Петербург): Лехин Сергей Никифорович, Мотина Надежда Владимировна, Затравкин Кирилл, Прокофьева Татьяна, Цуврила Константин"},
 		{file: "Photo_2016_IT-Planet.jpg", title: "2016 г., Финал Олимпиады IT-Планета, Екатеринбург: Затравкин Кирилл, Федоров Александр, Швецов Игорь, Иванова Анна, Клевцова Екатерина"},
+		{file: "Photo_2016.jpg", title: "2016 г., Чемпионат Мира по Программированию, Санкт-Петербург: Смирнов Павел, Федоров Александр, Иванова Анна"},
 		{file: "Photo_2017_Sochi.jpg", title: "2017 г., Финал Олимпиады IT-Планета, Сочи: Лехин Сергей Никифорович, Шалашный Сергей Игоревич, Швецов Игорь, Иванова Анна, Федоров Александр"},
     ];
     $(function(){
