--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -94,6 +94,7 @@ title: Достижения
 		{file: "it-planet_2014_6.jpg", title: ""},
 		{file: "it-planet_2014_7.jpg", title: ""},
 		{file: "it-planet_2014_8.jpg", title: ""},
+		{file: "it-planet_2014.jpg", title: ""},
 		{file: "it-planet_2015_1.jpg", title: ""},
 		{file: "it-planet_2015_2.jpg", title: ""},
 		{file: "it-planet_2015_3.jpg", title: ""},
@@ -107,6 +108,7 @@ title: Достижения
 		{file: "it-planet_2016_6.jpg", title: ""},
 		{file: "it-planet_2016_7.jpg", title: ""},
 		{file: "it-planet_2016_8.jpg", title: ""},
+		{file: "it-planet_2017.jpg", title: ""},
     ];
 	var abbyy = [
 		{file: "DiplomaAbbyCup_2014.jpg", title: ""}
