В Псков/Достижения добавлен диплом с IT-Планеты 2017

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -108,6 +108,7 @@ title: Достижения
 		{file: "it-planet_2016_6.jpg", title: ""},
 		{file: "it-planet_2016_7.jpg", title: ""},
 		{file: "it-planet_2016_8.jpg", title: ""},
+		{file: "it-planet_2017_1.jpg", title: ""},
 		{file: "it-planet_2017.jpg", title: ""},
     ];
 	var abbyy = [
