--- a/_posts/mc/2017-10-15-first.html
+++ b/_posts/mc/2017-10-15-first.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Дерево отрезков на canvas
+title: Установка и настройка среды разработки
 author: Valentin Gubarev
-section: experimental
+section: mc
 ---
 
 <h3>Установка и настройка среды разработки</h3>
