Добавлено поле с указанием количества последовательностей

--- a/_posts/experimental/2017-07-11-random.html
+++ b/_posts/experimental/2017-07-11-random.html
@@ -17,7 +17,10 @@ section: experimental
 <input type='text' style='font-family:monospace' placeholder='Укажите свой набор знаков' size='40em' maxlength='40' id='user'></input>
 <br><br>
 Длина последовательности 
-<input type='text' style='font-family:monospace' size='2em' value='8' maxlength='2' id='length'></input><p>
+<input type='text' style='font-family:monospace' size='2em' value='8' maxlength='2' id='length'></input>
+<br>
+Количество последовательностей 
+<input type='text' style='font-family:monospace' size='3em' value='10' maxlength='3' id='count'></input>
 <br>
 <input type='button' value='Генерировать' onClick='start_random()'></input>
 <br>
