--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -36,7 +36,7 @@ section: experimental
         input_value /= i;
       }else i += 2;
     }
-    if (input_value > 1)
+    //if (input_value > 1)
       rez.push(input_value);
     return rez;
   }
