--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -46,6 +46,6 @@ section: experimental
     if (is_natural_number(input_value)){
       var factorization = integer_factorization(input_value);
       alert(factorization);
-    }
+    }else alert('not natural');
   }
 </script>
