--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -13,10 +13,11 @@ section: experimental
   function is_natural_number(input_value){
     for (var i = 0; i < input_value.lenght; ++i)
       if (input_value[i] < '0' || input_value[i] > '9')
-        return false;
-    if (input_value.lenght >= 16) return false;
-    if (input_value[0] >= '2') return true;
+      {alert("input_value[i] < '0' || input_value[i] > '9'"); return false;}
+    if (input_value.lenght >= 16) {alert("input_value.lenght >= 16");return false;}
+    if (input_value[0] >= '2') {alert("input_value[0] >= '2'");return true;}
     if (input_value.lenght > 1) return true;
+	  alert("input_value.lenght");
     return false;
   }
       
