--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -17,7 +17,7 @@ section: experimental
     if (input_value.lenght >= 16) {alert("input_value.lenght >= 16");return false;}
     if (input_value[0] >= '2') {alert("input_value[0] >= '2'");return true;}
     if (input_value.lenght > 1) return true;
-	  alert("input_value.lenght");
+    alert(input_value.lenght);
     return false;
   }
       
