--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -49,6 +49,7 @@ section: experimental
     if (is_natural_number(input_value)){
       var factorization = integer_factorization(input_value);
       var table = document.getElementById('table');
+      alert(table.innerHTML);
       if (table.innerHTML == '')
 	      table.innerHTML = '<th><td>Число</td><td>Через запятую</td><td>Арифметика</td></th>';
       var str_arithmetic = factorization[0];
@@ -57,9 +58,9 @@ section: experimental
       str_arithmetic += ' = ' + input_value;
       table.innerHTML = '<tr>' +
 	      '<td bordercolor=black style="height:5px">' + input_value + '</td>' +
-	      '<td bordercolor=black style="height:5px">' + factorization + '</td></tr>' +
+	      '<td bordercolor=black style="height:5px">' + factorization + '</td>' +
 	      '<td bordercolor=black style="height:5px">' + str_arithmetic + '</td>' +
-	      table.innerHTML;
+	      '</tr>' + table.innerHTML;
     }else alert('Не натуральное число из указанного диапазона!');
   }
 </script>
