Степень, а то был индекс
<sub> поменяли на <sup>

--- a/_posts/experimental/2019-12-07-prime.html
+++ b/_posts/experimental/2019-12-07-prime.html
@@ -5,7 +5,7 @@ author: Valentin Gubarev
 section: experimental
 ---
 
-<br>Введите натуральное число [2,10<sub>15</sub>) без ведущих нулей
+<br>Введите натуральное число [2,10<sup>15</sup>) без ведущих нулей
 <input type='text' value='2' style='font-family:monospace' size='15em' maxlength='15' id='number'></input>
 <input type='button' value='Факторизовать' onClick='go()'></input>
 <br><br>
