замена одного слова

--- a/_posts/experimental/2020-02-23-logics.html
+++ b/_posts/experimental/2020-02-23-logics.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Решение логических выражений
+title: Решение логических задач
 author: Valentin Gubarev
 section: experimental
 ---
